# snippet-body

./: Cargo.toml  README.md
src/: lib.rs  serde_body.rs  standard_body.rs
