[package]
name = "snippet-body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"], optional = true }
erased-serde = { version = "*", optional = true }

[features]
json-debug = ["dep:serde", "dep:erased-serde"]
